--- a/user-frontend/src/components/Header/Header.module.css
+++ b/user-frontend/src/components/Header/Header.module.css
@@ -1,10 +1,20 @@
 header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+
+nav {
+  display: flex;
 }
 
 ul {
+  align-self: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
+  display: flex;
+}
+
+li {
+  margin: 0 10px 0 10px;
 }
