--- a/user-frontend/src/components/Header/Header.module.css
+++ b/user-frontend/src/components/Header/Header.module.css
@@ -1,13 +1,20 @@
-header {
+.Header {
   display: flex;
   justify-content: space-between;
+  min-height: 60px;
+  align-items: center;
 }
 
-nav {
+.Header h1 {
+  margin: 0 0 0 10px;
+}
+
+.Header nav {
   display: flex;
+  margin: 0 10px 0 0;
 }
 
-ul {
+.Header ul {
   align-self: center;
   list-style-type: none;
   margin: 0;
@@ -15,6 +22,21 @@ ul {
   display: flex;
 }
 
-li {
+.Header li {
   margin: 0 10px 0 10px;
+}
+
+.Header a {
+  color: var(--light-text); /* White text color for links */
+  text-decoration: none; /* Remove underline from links */
+  padding: 0.5rem 1rem; /* Padding around links */
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease; /* Smooth transition for hover effects */
+}
+
+.Header a:hover {
+  background-color: var(--accent); /* Change background on hover */
+  border-radius: 5px; /* Slightly rounded corners */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
