--- a/user-frontend/src/styles/index.css
+++ b/user-frontend/src/styles/index.css
@@ -17,6 +17,7 @@
 #root {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 body {
@@ -30,6 +31,7 @@ body {
 header {
   background-color: var(--dark-bg);
   color: var(--light-text);
+  width: 100%;
 }
 
 main {
@@ -37,6 +39,8 @@ main {
   justify-content: center;
   align-items: center;
   min-height: 400px;
+  margin: 20px 0 20px 0;
+  width: clamp(200px, 60%, 1000px);
 }
 
 a {
@@ -51,4 +55,5 @@ button {
 footer {
   background-color: var(--dark-bg); /* Footer background (Dark Blue) */
   color: var(--light-text); /* Footer text color (White) */
+  width: 100%;
 }
