--- a/user-frontend/src/components/Header/Header.module.css
+++ b/user-frontend/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .Header {
   display: flex;
   justify-content: space-between;
-  min-height: 60px;
+  min-height: 75px;
   align-items: center;
 }
 
@@ -16,6 +16,7 @@
 
 .Header ul {
   align-self: center;
+  align-items: center;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -26,17 +27,35 @@
   margin: 0 10px 0 10px;
 }
 
-.Header a {
+.Header a,
+.Header button {
   color: var(--light-text); /* White text color for links */
   text-decoration: none; /* Remove underline from links */
+  font-size: 1.2rem;
   padding: 0.5rem 1rem; /* Padding around links */
+  border-radius: 0;
+
   transition:
     background-color 0.3s ease,
     color 0.3s ease; /* Smooth transition for hover effects */
 }
 
+.Header li:nth-child(3) {
+  position: relative;
+}
+
+.Header button:nth-child(2) {
+  position: absolute; /* Position it relative to the first button */
+  top: 100%; /* Position it directly below the first button */
+  left: 0; /* Align with the left edge of the first button */
+  margin-top: 4px;
+}
+
 .Header a:hover {
   background-color: var(--accent); /* Change background on hover */
-  border-radius: 5px; /* Slightly rounded corners */
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.Header button:hover {
+  background-color: var(--accent);
 }
