--- a/user-frontend/src/styles/index.css
+++ b/user-frontend/src/styles/index.css
@@ -6,6 +6,7 @@
   --light-bg: #bbe1fa; /* Light Blue - Background for cards, containers, or secondary sections */
   --light-text: #ffffff; /* White - Font color for text on dark backgrounds */
   --neutral-gray: #fdf5e6; /* Light Gray - Used for subtle borders or background highlights */
+  --form-color: #dbe2ef;
 }
 
 * {
@@ -18,6 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
 }
 
 body {
@@ -41,6 +43,7 @@ main {
   min-height: 400px;
   margin: 20px 0 20px 0;
   width: clamp(200px, 60%, 1000px);
+  flex: 1;
 }
 
 a {
@@ -63,7 +66,7 @@ button {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-button:hover {
+form button:hover {
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); /* Lift up slightly */
 }
@@ -80,7 +83,7 @@ fieldset {
 
 legend {
   padding: 10px 0 0 0;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-weight: bold;
 }
 
@@ -88,6 +91,29 @@ form {
   border: 3px solid var(--dark-bg);
   background-color: var(--light-bg);
   padding: 10px;
+}
+
+label {
+  font-size: 1.2rem;
+}
+
+input {
+  border-radius: 10px; /* Rounded corners */
+  padding: 5px; /* Inner padding for comfort */
+  border: 2px solid black; /* Light border color */
+  width: 100%; /* Full width for inputs */
+  font-family: inherit; /* Use the same font as the rest of your app */
+  font-size: 1rem; /* Base font size */
+  background-color: #afc1e2; /* Light gray for input background */
+  transition:
+    border-color 0.2s ease-in-out,
+    box-shadow 0.2s ease-in-out;
+}
+
+input:focus {
+  outline: none; /* Remove default outline */
+  border-color: #1b262c; /* Dark header color for focus */
+  box-shadow: 0 0 0 3px rgba(27, 38, 44, 0.2); /* Subtle focus shadow */
 }
 
 #logInForm,
@@ -98,6 +124,12 @@ form {
   margin: 10px 0 0 0;
   align-self: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: var(--form-color);
+}
+
+#logInForm button,
+#signUpForm button {
+  margin-left: 5px;
 }
 
 .form-group {
@@ -112,4 +144,19 @@ form {
   top: 100%; /* Position below the input field */
   right: 0;
   color: red;
+}
+
+.inputError {
+  border: 1px solid red; /* Red border for error */
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px #afc1e2 inset !important; /* Match your desired background */
+  box-shadow: 0 0 0 30px #afc1e2 inset !important; /* Match your desired background */
+  -webkit-text-fill-color: #0f4c75; /* Set text color to your body text color */
+}
+
+input:-webkit-autofill:focus {
+  border-color: #1b262c;
+  box-shadow: 0 0 0 3px rgba(27, 38, 44, 0.2);
 }
