--- a/shared/styles/index.css
+++ b/shared/styles/index.css
@@ -42,7 +42,7 @@ main {
   align-items: center;
   min-height: 400px;
   margin: 20px 0 20px 0;
-  width: clamp(200px, 50%, 1000px);
+  width: 100%;
   flex: 1;
 }
 
@@ -88,8 +88,6 @@ legend {
 }
 
 form {
-  border: 3px solid var(--dark-bg);
-  background-color: var(--light-bg);
   padding: 10px;
 }
 
@@ -118,13 +116,14 @@ input:focus {
 
 #logInForm,
 #signUpForm {
-  width: clamp(330px, 70%, 600px);
+  width: clamp(330px, 70%, 450px);
   border-radius: 8px;
   min-height: 200px;
   margin: 10px 0 0 0;
   align-self: center;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   background-color: var(--form-color);
+  border: 3px solid var(--dark-bg);
 }
 
 #logInForm button,
