--- a/shared/components/Blog/Comment/Comment.module.css
+++ b/shared/components/Blog/Comment/Comment.module.css
@@ -1,8 +1,8 @@
 .Comment {
   display: flex;
   flex-direction: column;
-  border: 3px solid var(--dark-bg);
-  background-color: var(--neutral-gray);
+  background-color: var(--light-gray);
+  border: 2px solid var(--deep-teal);
   border-radius: 10px;
   margin: 10px 0;
   padding: 10px 10px 5px 10px;
