--- a/shared/components/Modal/Modal.module.css
+++ b/shared/components/Modal/Modal.module.css
@@ -9,19 +9,20 @@
 }
 
 .Modal {
+  background-color: var(--pale-blue);
   position: fixed;
   top: 50%;
   left: 50%;
+  width: clamp(200px, 50vw, 400px);
   transform: translate(-50%, -50%);
+  border: 2px solid black;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   z-index: 1000;
-  background: white;
   padding: 1rem;
   border-radius: 8px;
-  text-align: center;
 }
 
 .ButtonGroup {
@@ -36,14 +37,18 @@
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
 }
 
 .CancelButton {
-  background: #ddd;
+  background-color: var(--primary);
+  color: var(--light-text);
   margin-right: 10px;
 }
 
 .ConfirmButton {
-  background: #f44336;
-  color: white;
+  background-color: var(--alert);
+  color: var(--light-text);
 }
