--- a/shared/pages/BlogPost/BlogPost.module.css
+++ b/shared/pages/BlogPost/BlogPost.module.css
@@ -1,9 +1,62 @@
 .BlogPost {
   display: flex;
   flex-direction: column;
-  width: clamp(200px, 50%, 1000px);
+  width: clamp(300px, 70%, 1000px);
+  position: relative;
+  align-self: flex-start;
 }
 
 .postContainer {
-  margin: 0 0 10px 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 300px;
+}
+
+.postContainer h1 {
+  line-height: 1.2;
+  font-size: 1.7em;
+}
+
+.blogImage {
+  width: 100%;
+  height: 60vh;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  animation: fadeIn 1s forwards; /* Adjust duration as needed */
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.postContainer input {
+  font-size: 2em;
+  margin-bottom: 25px;
+}
+
+.EditDeleteContainer {
+  position: absolute;
+  top: 10px;
+  left: 130%;
+  display: flex;
+}
+
+.postContainer {
+  margin: 0 0 20px 0;
+}
+
+.EditDeleteContainer svg {
+  height: 30px;
+}
+
+.AuthorName {
+  font-size: 1.2em;
+}
+
+.DateTime {
+  font-size: 0.9em;
 }
