--- a/shared/components/Blog/BlogPreview/BlogPreview.module.css
+++ b/shared/components/Blog/BlogPreview/BlogPreview.module.css
@@ -1,31 +1,32 @@
 .BlogPreview {
   background-color: var(--light-gray);
   border: 2px solid var(--deep-teal);
+  height: 350px;
+  width: auto;
   border-radius: 10px;
   margin: 10px 0;
-
+  position: relative;
+  overflow: hidden;
+  cursor: pointer; /* Indicate clickable area */
   transition:
     transform 0.2s ease,
-    box-shadow 0.2s ease; /* Add transition for hover effect */
-  cursor: pointer; /* Indicate clickable area */
+    box-shadow 0.2s ease,
+    opacity 0.2s ease;
 }
 
 .BlogPreview:hover {
-  transform: translateY(-2px); /* Slight lift effect on hover */
+  transform: translateY(-5px); /* Slight lift effect on hover */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-}
-
-.BlogPreview h2 {
-  color: var(--primary);
-  margin-right: 15px;
+  opacity: 0.9; /* Change opacity on hover */
 }
 
 .blogPreviewImage {
   width: 100%;
+  height: 100%;
+  object-fit: cover; /* maintain aspect ratio */
 }
 
 .BlogPreview p {
-  color: var(--dark-bg); /* Dark color for the content text */
   line-height: 1.5; /* Improved line height for readability */
   margin: 10px 0; /* Space between paragraph and other elements */
 }
@@ -35,10 +36,37 @@
 }
 
 .bottomDiv {
+  position: absolute;
+  bottom: 0; /* Stick it to the bottom */
+  left: 0; /* Align to the left */
+  right: 0; /* Stretch to the right */
+  padding: 5px 10px 10px 10px;
+  min-height: 20%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent dark background */
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+}
+
+.bottomDiv * {
+  color: white;
+}
+
+.bottomDiv h3 {
+  font-size: 1.3em;
+  font-weight: lighter;
+  transition: text-decoration 0.2s ease;
+}
+
+.BlogPreview:hover h3 {
+  text-decoration: underline; /* Underline the h2 on hover */
 }
 
 .bottomDiv small {
   align-self: flex-start;
+}
+
+.details {
+  font-size: 1.1em;
+  display: flex;
+  justify-content: space-between;
 }
