--- a/shared/components/Modal/Modal.module.css
+++ b/shared/components/Modal/Modal.module.css
@@ -43,7 +43,7 @@
 }
 
 .CancelButton {
-  background-color: var(--primary);
+  background-color: var(--white);
   color: var(--white);
   margin-right: 10px;
 }
