--- a/shared/components/Blog/Comment/Comment.module.css
+++ b/shared/components/Blog/Comment/Comment.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--light-gray);
+  color: var(--dark-gray);
   border: 2px solid var(--deep-teal);
   border-radius: 10px;
   margin: 10px 0;
