--- a/shared/components/Loading/Loading.module.css
+++ b/shared/components/Loading/Loading.module.css
@@ -13,7 +13,7 @@
   width: 40px;
   height: 40px;
   border: 4px solid rgba(0, 0, 0, 0.1);
-  border-top-color: var(--primary); /* Color for the spinner */
+  border-top-color: var(--white); /* Color for the spinner */
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
@@ -21,7 +21,7 @@
 .loadingText {
   margin-top: 1rem;
   font-size: 1rem;
-  color: var(--primary); /* Adjust this to match your theme */
+  color: var(--white); /* Adjust this to match your theme */
 }
 
 @keyframes spin {
