--- a/shared/pages/Home/Home.module.css
+++ b/shared/pages/Home/Home.module.css
@@ -1,7 +1,7 @@
 .Home {
   display: flex;
   flex-direction: column;
-  width: clamp(200px, 50%, 1000px);
+  width: clamp(300px, 80vw, 1200px);
 }
 
 .Home button {
