--- a/author-frontend/src/components/EditorComponent/EditorComponent.module.css
+++ b/author-frontend/src/components/EditorComponent/EditorComponent.module.css
@@ -1,5 +1,5 @@
 .my-editor-body {
-  background-color: var(--pale-blue); /* Content area background */
+  background-color: var(--light-gray); /* Content area background */
 }
 
 /* .tox-toolbar__group {
@@ -12,7 +12,7 @@
 .tox-tinymce,
 .tox.tinymce * {
   background-color: var(
-    --pale-blue
+    --light-gray
   ); /* Optional: editor container background */
 }
 
