--- a/shared/components/Modal/Modal.module.css
+++ b/shared/components/Modal/Modal.module.css
@@ -9,7 +9,7 @@
 }
 
 .Modal {
-  background-color: var(--pale-blue);
+  background-color: var(--light-gray);
   position: fixed;
   top: 50%;
   left: 50%;
@@ -43,7 +43,7 @@
 }
 
 .CancelButton {
-  background-color: var(--white);
+  background-color: var(--teal);
   color: var(--white);
   margin-right: 10px;
 }
