refactor inputs, add Home page style

--- a/author-frontend/src/components/AffectPublish/AffectPublish.module.css
+++ b/author-frontend/src/components/AffectPublish/AffectPublish.module.css
@@ -11,6 +11,9 @@
   font-size: 14px;
   box-shadow: none;
 }
+.publishDiv .linkButton:hover {
+  background-color: inherit;
+}
 
 .smallMessage {
   color: black;
