--- a/shared/pages/Home/Home.module.css
+++ b/shared/pages/Home/Home.module.css
@@ -7,3 +7,72 @@
 .Home button {
   align-self: center;
 }
+
+.topGridContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 10px;
+  height: 80vh;
+}
+
+.topGridContainer > :nth-child(1) {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.topGridContainer > :nth-child(2) {
+  grid-column: 3 / 4;
+  grid-row: 1 / 3;
+}
+
+.topGridContainer > :nth-child(3) {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+.topGridContainer > :nth-child(4) {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.otherPostsContainer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+}
+/* 
+make this look better */
+
+.headingDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center align if desired */
+  position: relative;
+  text-align: center;
+}
+
+.headingDiv h3 {
+  font-size: 1.3rem;
+  margin: 0; /* Remove default margins */
+  display: inline-block; /* Center the h3 */
+  position: relative; /* Relative positioning to place the hr */
+  background: var(
+    --white
+  ); /* Optional: To prevent hr line from being visible behind text */
+  padding: 0 10px; /* Optional: Add some padding to create space around the text */
+  z-index: 1;
+  right: 25%;
+}
+
+.headingDiv hr {
+  position: absolute;
+  top: 50%; /* Adjust this to position the line intersecting the h3 */
+  left: 0;
+  right: 0;
+  border: none;
+  border-top: 2px solid black; /* Adjust color and thickness as needed */
+  z-index: 0;
+  width: 100%;
+  height: 1px; /* Set height for the line */
+}
