--- a/shared/components/Blog/CommentSection/CommentSection.module.css
+++ b/shared/components/Blog/CommentSection/CommentSection.module.css
@@ -1,3 +1,7 @@
+.CommentSection h2 {
+  font-size: 1.7rem;
+}
+
 .CommentSection li {
   list-style-type: none;
 }
@@ -22,7 +26,7 @@
   width: 100%;
   resize: vertical; /* Allow vertical resize for better UX */
   font-family: inherit; /* Use the same font as the rest of your app */
-  font-size: 1rem;
+  font-size: 1.3rem;
   transition: border-color 0.2s ease-in-out; /* Smooth border transition */
 }
 
@@ -51,7 +55,7 @@
 }
 
 .commentForm button {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   max-height: 10px;
   display: flex;
   align-items: center;
@@ -62,5 +66,6 @@
 }
 
 .noCommentsP {
+  font-size: 1.2rem;
   margin: 10px 0 0 3px;
 }
