--- a/shared/pages/BlogPost/BlogPost.module.css
+++ b/shared/pages/BlogPost/BlogPost.module.css
@@ -1,7 +1,7 @@
 .BlogPost {
   display: flex;
   flex-direction: column;
-  width: clamp(300px, 70%, 800px);
+  width: clamp(300px, 70%, 900px);
   position: relative;
   align-self: flex-start;
 }
@@ -12,9 +12,15 @@
   min-height: 300px;
 }
 
+.postContent,
+.AuthorName {
+  overflow-wrap: break-word;
+  font-size: 1.5rem;
+}
+
 .postContainer h1 {
   line-height: 1.2;
-  font-size: 1.7em;
+  font-size: 2.3rem;
 }
 
 .postContent h1,
@@ -28,8 +34,9 @@
 }
 
 .blogImage {
-  width: 100%;
-  height: 60vh;
+  width: auto;
+  height: 40vh;
+  background-size: cover;
   margin-bottom: 15px;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -44,7 +51,7 @@
 }
 
 .postContainer input {
-  font-size: 2em;
+  font-size: 2rem;
 }
 
 .EditDeleteContainer {
@@ -59,7 +66,7 @@
 }
 
 .EditDeleteContainer svg {
-  height: 30px;
+  height: 40px;
   transition: transform 0.2s ease;
 }
 
@@ -67,10 +74,6 @@
   transform: translateY(-2px); /* Slight lift effect on hover */
 }
 
-.AuthorName {
-  font-size: 1.2em;
-}
-
 .DateTime {
-  font-size: 0.9em;
+  font-size: 1.2rem;
 }
