--- a/shared/styles/index.css
+++ b/shared/styles/index.css
@@ -52,7 +52,7 @@ header a {
   transition: background-color 0.2s ease;
 }
 
-header a:hover {
+header nav a:hover {
   background-color: var(--teal);
 }
 
@@ -94,7 +94,7 @@ fieldset {
 
 legend {
   padding: 10px 0 0 0;
-  font-size: 1.6rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -139,7 +139,7 @@ input:focus {
 
 #logInForm,
 #signUpForm {
-  width: clamp(330px, 70%, 450px);
+  width: clamp(400px, 70%, 500px);
   border-radius: 8px;
   min-height: 200px;
   margin: 10px 0 0 0;
