--- a/author-frontend/src/components/AffectPublish/AffectPublish.module.css
+++ b/author-frontend/src/components/AffectPublish/AffectPublish.module.css
@@ -3,11 +3,11 @@
 }
 
 .publishMessage {
-  font-size: 1.3em;
+  font-size: 1.3rem;
 }
 
 .linkButton {
-  font-size: 1.1em;
+  font-size: 1.1rem;
 }
 
 .linkButton {
