--- a/shared/components/Blog/CommentSection/CommentSection.module.css
+++ b/shared/components/Blog/CommentSection/CommentSection.module.css
@@ -42,7 +42,7 @@
   margin: 10px 5px 0 0;
   visibility: hidden;
   opacity: 0;
-  height: 25px;
+  height: 30px;
 }
 
 .commentButtonDiv.visible {
@@ -56,7 +56,7 @@
 
 .commentForm button {
   font-size: 1.2rem;
-  max-height: 10px;
+  height: 100%;
   display: flex;
   align-items: center;
 }
