--- a/shared/pages/BlogPost/BlogPost.module.css
+++ b/shared/pages/BlogPost/BlogPost.module.css
@@ -9,6 +9,8 @@
 .postContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-height: 300px;
 }
 
@@ -35,8 +37,9 @@
 
 .blogImage {
   width: auto;
-  height: 40vh;
-  background-size: cover;
+  min-width: 100%;
+  height: 50vh;
+  /* object-fit: contain; */
   margin-bottom: 15px;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
