--- a/shared/pages/Home/Home.module.css
+++ b/shared/pages/Home/Home.module.css
@@ -45,8 +45,10 @@
   grid-template-columns: 1fr 1fr;
   gap: 10px;
 }
-/* 
-make this look better */
+
+.otherPostsContainer > div {
+  height: 350px;
+}
 
 .headingDiv {
   display: flex;
