--- a/frontend/src/pages/BlogPost/BlogPost.module.css
+++ b/frontend/src/pages/BlogPost/BlogPost.module.css
@@ -1,9 +1,10 @@
-.BlogPost {
+.blogPost {
   display: flex;
   flex-direction: column;
   width: clamp(300px, 70%, 900px);
   position: relative;
   align-self: flex-start;
+  align-items: center;
 }
 
 .postContainer {
@@ -14,15 +15,19 @@
   min-height: 300px;
 }
 
+.blogHeader {
+  width: 100%;
+}
+
 .postContent,
 .AuthorName {
   overflow-wrap: break-word;
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 }
 
 .postContainer h1 {
   line-height: 1.2;
-  font-size: 2.3rem;
+  font-size: 2.2rem;
 }
 
 .postContent h1,
@@ -36,11 +41,10 @@
 }
 
 .blogImage {
-  width: auto;
-  min-width: 100%;
-  height: 50vh;
-  /* object-fit: contain; */
-  margin-bottom: 15px;
+  width: 100%;
+  height: auto;
+
+  margin: 1rem 0 1rem 0;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   opacity: 0;
@@ -57,7 +61,7 @@
   font-size: 2rem;
 }
 
-.EditDeleteContainer {
+.editDeleteContainer {
   position: absolute;
   top: 10px;
   left: 100%;
@@ -68,15 +72,15 @@
   margin: 0 0 20px 0;
 }
 
-.EditDeleteContainer svg {
+.editDeleteContainer svg {
   height: 40px;
   transition: transform 0.2s ease;
 }
 
-.EditDeleteContainer svg:hover {
+.editDeleteContainer svg:hover {
   transform: translateY(-2px); /* Slight lift effect on hover */
 }
 
-.DateTime {
+.dateTime {
   font-size: 1.2rem;
 }
