--- a/frontend/src/components/Header/Header.module.css
+++ b/frontend/src/components/Header/Header.module.css
@@ -1,26 +1,26 @@
-.Header {
+.header {
   display: flex;
   justify-content: space-between;
   min-height: 75px;
   align-items: center;
 }
 
-.Header h1 {
-  font-size: 2.8rem;
+.header h1 {
+  font-size: 2.5rem;
   margin: 0 0 0 10px;
 }
 
-.Header h1 a {
+.header h1 a {
   color: var(--white);
   text-decoration: none;
 }
 
-.Header nav {
+.header nav {
   display: flex;
   margin: 0 10px 0 0;
 }
 
-.Header ul {
+.header ul {
   align-self: center;
   align-items: center;
   list-style-type: none;
@@ -29,29 +29,29 @@
   display: flex;
 }
 
-.Header li {
+.header li {
   margin: 0 10px 0 10px;
 }
 
-.Header ul a,
-.Header ul button {
+.header ul a,
+.header ul button {
   text-decoration: none; /* Remove underline from links */
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   padding: 0.5rem 1rem; /* Padding around links */
   border-radius: 0;
 }
 
-.Header li:nth-child(3) {
+.header li:nth-child(3) {
   position: relative;
 }
 
-.Header button:nth-child(2) {
+.header button:nth-child(2) {
   position: absolute; /* Position it relative to the first button */
   top: 100%; /* Position it directly below the first button */
   left: 0; /* Align with the left edge of the first button */
   width: 100%;
 }
 
-.Header ul a:hover {
+.header ul a:hover {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
