--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -135,7 +135,7 @@ input:focus {
 
 #logInForm,
 #signUpForm {
-  width: clamp(400px, 70%, 500px);
+  width: clamp(350px, 70%, 450px);
   border-radius: 8px;
   min-height: 200px;
   margin: 10px 0 0 0;
@@ -145,9 +145,20 @@ input:focus {
   border: 2px solid var(--deep-teal);
 }
 
+#logInForm legend,
+#signUpForm legend {
+  font-size: 2rem;
+}
+
+#logInForm *,
+#signUpForm * {
+  font-size: 1.1rem;
+}
+
 #logInForm button,
 #signUpForm button {
   margin-left: 5px;
+  font-size: 1.2rem;
 }
 
 button {
