--- a/frontend/src/components/Blog/BlogPreview/BlogPreview.module.css
+++ b/frontend/src/components/Blog/BlogPreview/BlogPreview.module.css
@@ -6,7 +6,7 @@
   margin: 10px 0;
   position: relative;
   overflow: hidden;
-  cursor: pointer; /* Indicate clickable area */
+  cursor: pointer;
   transition:
     transform 0.2s ease,
     box-shadow 0.2s ease,
@@ -14,20 +14,20 @@
 }
 
 .blogPreview:hover {
-  transform: translateY(-5px); /* Slight lift effect on hover */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
-  opacity: 0.9; /* Change opacity on hover */
+  transform: translateY(-5px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0.9;
 }
 
 .blogPreviewImage {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* maintain aspect ratio */
+  object-fit: cover;
 }
 
 .blogPreview p {
-  line-height: 1.5; /* Improved line height for readability */
-  margin: 10px 0; /* Space between paragraph and other elements */
+  line-height: 1.5;
+  margin: 10px 0;
 }
 
 .blogPreview small {
@@ -36,11 +36,11 @@
 
 .bottomDiv {
   position: absolute;
-  bottom: 0; /* Stick it to the bottom */
-  left: 0; /* Align to the left */
-  right: 0; /* Stretch to the right */
+  bottom: 0;
+  left: 0;
+  right: 0;
   padding: 5px 10px 10px 10px;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent dark background */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
 }
@@ -56,7 +56,7 @@
 }
 
 .blogPreview:hover h3 {
-  text-decoration: underline; /* Underline the h2 on hover */
+  text-decoration: underline;
 }
 
 .bottomDiv small {
