--- a/frontend/src/components/Blog/CommentSection/CommentSection.module.css
+++ b/frontend/src/components/Blog/CommentSection/CommentSection.module.css
@@ -30,18 +30,18 @@
   background-color: var(--light-gray);
   border-radius: 10px;
   padding: 10px;
-  border: 2px solid black; /* Light border color */
+  border: 2px solid black;
   width: 100%;
-  resize: vertical; /* Allow vertical resize for better UX */
-  font-family: inherit; /* Use the same font as the rest of your app */
+  resize: vertical;
+  font-family: inherit;
   font-size: 1.1rem;
-  transition: border-color 0.2s ease-in-out; /* Smooth border transition */
+  transition: border-color 0.2s ease-in-out;
 }
 
 .commentForm textarea:focus {
   outline: none;
-  border-color: #0f4c75; /* Highlight color for focus */
-  box-shadow: 0 0 0 3px rgba(11, 72, 110, 0.2); /* Subtle focus shadow */
+  border-color: #0f4c75;
+  box-shadow: 0 0 0 3px rgba(11, 72, 110, 0.2);
 }
 
 .commentButtonDiv {
@@ -54,8 +54,8 @@
 }
 
 .commentButtonDiv.visible {
-  opacity: 1; /* Make the buttons visible */
-  visibility: visible; /* Make the buttons focusable */
+  opacity: 1;
+  visibility: visible;
 }
 
 .commentButtonDiv button:first-child {
