--- a/frontend/src/pages/BlogPost/BlogPost.module.css
+++ b/frontend/src/pages/BlogPost/BlogPost.module.css
@@ -19,6 +19,10 @@
   width: 100%;
 }
 
+.blogHeader p {
+  font-size: 1.2rem;
+}
+
 .postContent,
 .AuthorName {
   overflow-wrap: break-word;
@@ -43,12 +47,11 @@
 .blogImage {
   width: 100%;
   height: auto;
-
   margin: 1rem 0 1rem 0;
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   opacity: 0;
-  animation: fadeIn 1s forwards; /* Adjust duration as needed */
+  animation: fadeIn 1s forwards;
 }
 
 @keyframes fadeIn {
@@ -78,9 +81,5 @@
 }
 
 .editDeleteContainer svg:hover {
-  transform: translateY(-2px); /* Slight lift effect on hover */
-}
-
-.dateTime {
-  font-size: 1.2rem;
+  transform: translateY(-2px);
 }
