--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -58,32 +58,30 @@ button.newPost {
 .headingDiv {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center align if desired */
+  align-items: center;
   position: relative;
   text-align: center;
 }
 
 .headingDiv h3 {
   font-size: 1.7rem;
-  margin: 0; /* Remove default margins */
-  display: inline-block; /* Center the h3 */
-  position: relative; /* Relative positioning to place the hr */
-  background: var(
-    --white
-  ); /* Optional: To prevent hr line from being visible behind text */
-  padding: 0 10px; /* Optional: Add some padding to create space around the text */
+  margin: 0;
+  display: inline-block;
+  position: relative;
+  background: var(--white);
+  padding: 0 10px;
   z-index: 1;
   right: 25%;
 }
 
 .headingDiv hr {
   position: absolute;
-  top: 50%; /* Adjust this to position the line intersecting the h3 */
+  top: 50%;
   left: 0;
   right: 0;
   border: none;
-  border-top: 2px solid black; /* Adjust color and thickness as needed */
+  border-top: 2px solid black;
   z-index: 0;
   width: 100%;
-  height: 1px; /* Set height for the line */
+  height: 1px;
 }
